--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/backend/src/tasks/weights/arcface_r100.pth
-/backend/src/tasks/weights/face_detect.pt
-/backend/src/tasks/weights/scrfd_2.5g_bnkps.onnx
+./src/tasks/weights/arcface_r100.pth
+./src/tasks/weights/face_detect.pt
+./src/tasks/weights/scrfd_2.5g_bnkps.onnx
+./qdrant_data
